Sat Feb 13 07:11:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* (ruby_vm_send_signal): deal with signals properly.

Sat Nov 21 01:03:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_queue_mark): mark possible objects.

	* vm.c (rb_vm_s_parent, rb_vm_parent): new methods to return the
	  parent VM.

	* file.c (Init_File): initialize key for separator only once.

Fri Nov 20 08:15:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_start): handshake.

Fri Nov 20 08:14:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_copy_to_vm): reset instance variables.

Fri Nov 20 04:39:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_send, rb_vm_recv): supported strings.

Fri Nov 20 04:38:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_queue_shift_wait): fixed the case of no-timeout.

Tue Nov 17 12:00:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_vm_t): manage references from other VMs.

	* mvm.c (ruby_vm_destruct): ditto.

	* vm.c (ruby_vm_free, vm_init2, vm_create, InitVM_VM): ditto.

	* vm.c (rb_vm_send): reject terminated VM.

Mon Nov 16 19:18:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (ruby_dirfd): need O_DIRECTORY and O_LARGEFILE.

	* vm.c (ruby_make_bare_vm): initialize thread cwd.

Mon Nov 16 18:55:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (get_stack): fixed stack start address on the
	  platforms using pthread_attr_t.

Mon Nov 16 01:36:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_queue_shift_wait): added.

	* vm.c (rb_vm_send, rb_vm_recv): new methods.

	* vm_core.h (rb_queue_t): added condition variable.

	* vm_core.h (rb_vm_t): moved message queue from rb_thread_t.

Mon Nov 16 01:14:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_current): new method RubyVM.current.

	* vm.c (rb_vm_to_s): include address of rb_vm_t in RubyVM#to_s.
